--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,12 @@ h1 {
     font-size: 48px;
 }
 
+/* Defines color in middle of logo */
 .seo {
     color: #d9dcd6;
 }
 
+/* styles nav buttons and moves them to the right */
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,6 +34,7 @@ nav {
     font-size: 20px;
 }
 
+/* removes bullets from list element */
 ul {
     list-style-type: none;
 }
@@ -41,6 +44,7 @@ li {
     margin-left: 25px;
 }
 
+/* removes the underlining from the link */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -86,6 +90,7 @@ aside {
     background-color: #2589bd;
 }
 
+/* consolidated benefits to one class */
 .benefit {
     margin-bottom: 32px;
     color: #ffffff;
@@ -102,6 +107,7 @@ h3 {
     max-width: 150px;
 }
 
+/* consolidated products to one class */
 .products {
     margin-bottom: 20px;
     padding: 50px;
@@ -127,6 +133,7 @@ footer {
     text-align: center;
 }
 
+/* added h4 styling */
 h4 {
     font-size: 20px;
 }
